# smart_lock_project

./: CMakeLists.txt
components/bsp/: CMakeLists.txt
components/bsp/bsp_camera/: bsp_camera.c
components/bsp/bsp_camera/include/: bsp_camera.h
components/bsp/bsp_esp32p4/include/: bsp_config.h
components/bsp/bsp_esp32s3/: bsp.c  bsp_esp32s3.c
components/bsp/bsp_esp32s3/include/: bsp_config.h  bsp_esp32s3.h
components/bsp/bsp_fp/: bsp_fp.c
components/bsp/bsp_fp/include/: bsp_fp.h
components/bsp/bsp_gpio/: bsp_gpio.c
components/bsp/bsp_gpio/include/: bsp_gpio.h
components/bsp/bsp_lcd/: bsp_lcd.c  ili9488.c
components/bsp/bsp_lcd/include/: bsp_lcd.h  ili9488.h
components/bsp/bsp_ledc/: bsp_ledc.c
components/bsp/bsp_ledc/include/: bsp_ledc.h
components/bsp/bsp_microsd/: bsp_microsd.c
components/bsp/bsp_microsd/include/: bsp_microsd.h
components/bsp/bsp_servo/: bsp_servo.c
components/bsp/bsp_servo/include/: bsp_servo.h
components/bsp/bsp_spi/: bsp_spi.c
components/bsp/bsp_spi/include/: bsp_spi.h
components/bsp/bsp_touch/: bsp_touch.c  bsp_xpt2046.c
components/bsp/bsp_touch/include/: bsp_touch.h  bsp_xpt2046.h  esp_lcd_touch.h
components/model/: CMakeLists.txt
components/model/camera_serivce/: camera_service.c  camera_service.h
components/model/face_serivce/: face_service.c  face_service.h
components/model/fp_serivce/: fp_service.c  fp_service.h
components/model/log_serivce/: log_service.c  log_service.h
components/model/password_serivce/: password_service.c  password_service.h
components/presenter/: CMakeLists.txt  presenter.c  presenter_home.c
components/presenter/include/: presenter.h  presenter_home.h
components/serives/: CMakeLists.txt  serives.c
components/service/: CMakeLists.txt
components/service/camera_service/: camera_service.c  camera_service.h
components/service/display_service/: display_service.c  display_service.h
components/ui/: CMakeLists.txt  ui.c
components/view/: CMakeLists.txt  view.c  view_admin.c  view_home.c  view_password.c  view_result.c
components/view/include/: view.h  view_admin.h  view_home.h  view_password.h  view_result.h
documents/: 开发手册.md  系统架构设计文档.md  需求分析.md
main/: CMakeLists.txt  idf_component.yml  main.c
